[package]
name = "apalah"
version = "0.1.1"
edition = "2021"
authors = ["Rifuki <mahomarifuki@gmail.com>"]
description = "just apalah"
license = "MIT"
repository = "https://github.com/rifuki/apalah"
keywords = ["just"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
